fix(site-headers): Updates icons size to be all s size on mobile - INNO-2022

--- a/src/systems/ec/implementations/vanilla/packages/ec-component-site-header-core/ec-component-site-header-core.scss
+++ b/src/systems/ec/implementations/vanilla/packages/ec-component-site-header-core/ec-component-site-header-core.scss
@@ -101,12 +101,6 @@
     z-index: $ecl-z-index-dropdown;
   }
 
-  .ecl-site-header-core__search-icon {
-    height: $ecl-icon-s;
-    margin-bottom: 0.25rem;
-    width: $ecl-icon-s;
-  }
-
   .ecl-site-header-core__login-box--active {
     display: block;
   }
